Basic map functionality with mock parties around the DHBW

--- a/clientapp/app/src/main/res/values/strings.xml
+++ b/clientapp/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">PARTYlive</string>
-    <string name="title_activity_main">Map</string>
+    <string name="title_activity_main">PARTYLive</string>
 </resources>
